--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "^4.4.4",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.8.0",
     "zone.js": "~0.12.0"
   },
